fixing figure narrow on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -880,6 +880,8 @@ article{
       padding: 0px 15px;
     }
     figure,
+    figure.wide,
+    figure.narrow,
     blockquote,
     p.sidenote,
     figure.sidebar {
